Add isTweetOwner and deleteTweet features